Have active chat panel directive working for profiles with redirect. Working on groups.

--- a/browser/js/attendee/attendee.html
+++ b/browser/js/attendee/attendee.html
@@ -1,3 +1,4 @@
+<active-chat-panel user="user"></active-chat-panel>
 <section id="user-profile" class="container-fluid">
   <div class="row">
     <div class="flex-container-row attendee-header">
