Added active-chat-panel to required states.

--- a/browser/js/management-users/management-users.html
+++ b/browser/js/management-users/management-users.html
@@ -1,3 +1,4 @@
+<active-chat-panel user="user"></active-chat-panel>
 <section class="management-sub-menu container-fluid">
   <header class="row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
