--- a/browser/js/management/management.html
+++ b/browser/js/management/management.html
@@ -1,3 +1,4 @@
+<active-chat-panel user="currentUser"></active-chat-panel>
 <section id="management-panel" class="container">
   <h2>Management Dashboard</h2>
   <div class="flex-container-row">
