--- a/browser/js/messaging/messaging.html
+++ b/browser/js/messaging/messaging.html
@@ -1,3 +1,4 @@
+<active-chat-panel user="user"></active-chat-panel>
 <section class="management-sub-menu container-fluid">
   <header class="row">
     <h2>Messaging</h2>
