--- a/browser/js/messaging/messaging-contacts.html
+++ b/browser/js/messaging/messaging-contacts.html
@@ -3,8 +3,14 @@
     <div class="flex-container-row message-group-modification">
       <form name="newMessageGroup" ng-submit="createGroup()">
         <input type="text" class="sqnInputActive" ng-model="newGroup.name"></input>
+        <div class="checkbox sqnInput">
+          <label for="group-private"><input type="checkbox" name="group-private" ng-model="newGroup.private"></input>Private (only group members can add others, not visible)</label>
+        </div>
         <input type="submit" value="Create Group" ng-disabled="newGroup.participants.length === 0"></input>
       </form>
+    </div>
+    <div class="flex-container-row">
+      
     </div>
     <search-options evts="events" categories="categories" platforms="platforms"></search-options>
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
