Have basic transmission of data working. Reconfigured states more accurately reflect app composition.

--- a/browser/js/common/directives/chat-contact-tile/chat-contact-tile.html
+++ b/browser/js/common/directives/chat-contact-tile/chat-contact-tile.html
@@ -1,4 +1,4 @@
-<div ng-class="{'chat-user-online': session.online}" class="tile-content" ng-click="goToSession()">
+<div ng-class="{'chat-user-online': session.online}" class="tile-content flex-container-row" ng-click="goToSession()">
   <h6 ng-bind="session.displayName"></h6>
   <span ng-bind="session.online"></span>
 </div>
