--- a/browser/js/messaging/messaging-contacts.html
+++ b/browser/js/messaging/messaging-contacts.html
@@ -1,16 +1,21 @@
-<section class="messaging-contacts container-fluid">
+<active-chat-panel user="user"></active-chat-panel>
+<section class="messaging-state container-fluid">
   <header class="row">
-    <div class="flex-container-row message-group-modification">
-      <form name="newMessageGroup" ng-submit="createGroup()">
-        <input type="text" class="sqnInputActive" ng-model="newGroup.name"></input>
-        <div class="checkbox sqnInput">
-          <label for="group-private"><input type="checkbox" name="group-private" ng-model="newGroup.private"></input>Private (only group members can add others, not visible)</label>
+    <div class="">
+      <button class="sqn-btn">Add to private group</button>
+      <button class="sqn-btn">Create new group</button>
+    </div>
+    <div ng-if="createNewGroup" class="flex-container-row message-group-modification">
+      <form class="new-message-group" name="newMessageGroup" ng-submit="createGroup()">
+        <input type="text" class="sqnInputActive input-inline" ng-model="newGroup.name" placeholder="Add a group name"></input>
+        <div class="checkbox sqnInput input-inline">
+          <label for="group-private"><input type="checkbox" name="group-private" ng-model="newGroup.private"></input>Private (only group members can add others)</label>
         </div>
-        <input type="submit" value="Create Group" ng-disabled="newGroup.participants.length === 0"></input>
+        <input class="sqn-btn-positive" type="submit" value="Create Group" ng-disabled="newGroup.participants.length === 0"></input>
       </form>
     </div>
-    <div class="flex-container-row">
-      
+    <div ng-if="modifyPrivateGroup" class="flex-container-row">
+
     </div>
     <search-options evts="events" categories="categories" platforms="platforms"></search-options>
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
