--- a/browser/js/common/directives/active-chat-panel/active-chat-panel.html
+++ b/browser/js/common/directives/active-chat-panel/active-chat-panel.html
@@ -3,7 +3,7 @@
 </div>
 <section>
   <header>
-    <a class="sqn-btn" ui-sref="messaging.contacts">Find a squadron mate</a>
+    <a class="sqn-btn" ui-sref="messagingContacts({id: userId })">Find a squadron mate</a>
     <h5>Message Contacts</h5>
   </header>
   <div class="active-chat-holder">
