--- a/browser/js/common/directives/group-contact-tile/group-contact-tile.html
+++ b/browser/js/common/directives/group-contact-tile/group-contact-tile.html
@@ -1,3 +1,4 @@
-<div ng-class="" class="tile-content" ng-click="goToSession()">
-  <h6 ng-bind="session.name"></h6>
-</div>
+<div ng-class="" class="tile-content group-tile flex-container-row">
+  <h6 ng-click="goToSession()" ng-bind="session.name"></h6>
+  <button ng-if="contactState" ng-click="setGroupToModify()" class="sqn-btn-small">Add Users</button>
+</a>
