--- a/browser/js/messaging/messaging-session.html
+++ b/browser/js/messaging/messaging-session.html
@@ -1,4 +1,5 @@
-<section>
+<active-chat-panel user="user"></active-chat-panel>
+<section class="messaging-state">
   <header>
     <h3>Group Name</h3>
     <div>
