--- a/browser/js/common/directives/group-contact-tile/group-contact-tile.html
+++ b/browser/js/common/directives/group-contact-tile/group-contact-tile.html
@@ -1,4 +1,4 @@
 <div ng-class="" class="tile-content group-tile flex-container-row">
   <h6 ng-click="goToSession()" ng-bind="session.name"></h6>
-  <button ng-if="contactState" ng-click="setGroupToModify()" class="sqn-btn-small">Add Users</button>
+  <button ng-if="contactState" ng-class="{'adding-user': addingUser}" ng-click="setGroupToModify()" ng-disabled="addingUser" class="sqn-btn-small">Add User</button>
 </a>
