Completed adding user to public group when clicked on. Now working on adding user to private group.

--- a/browser/js/common/directives/active-chat-panel/active-chat-panel.html
+++ b/browser/js/common/directives/active-chat-panel/active-chat-panel.html
@@ -12,7 +12,7 @@
   </div>
   <div class="active-chat-holder">
     <h6>Your Private Group Chats</h6>
-    <group-contact-tile ng-repeat="group in privateGroupSessions" userid="user.$id || user.uid || user.id" session="group">
+    <group-contact-tile ng-repeat="group in userGroupSessions" userid="user.$id || user.uid || user.id" session="group">
     </group-contact-tile>
   </div>
   <div class="active-chat-holder">
