--- a/browser/js/messaging/messaging-contacts.html
+++ b/browser/js/messaging/messaging-contacts.html
@@ -5,7 +5,7 @@
       <button class="sqn-btn">Create new group</button>
     </div>
     <div class="flex-container-row message-group-modification">
-      <form ng-if="!modifyPrivateGroup" class="new-message-group" name="newMessageGroup" ng-submit="createGroup()">
+      <form class="new-message-group" name="newMessageGroup" ng-submit="createGroup()">
         <input type="text" class="sqnInputActive input-inline" ng-model="newGroup.name" placeholder="Add a group name"></input>
         <div class="checkbox sqnInput input-inline">
           <label for="group-private"><input type="checkbox" name="group-private" ng-model="newGroup.private"></input>Private (only group members can add others)</label>
