--- a/browser/js/messaging/messaging-session.html
+++ b/browser/js/messaging/messaging-session.html
@@ -1,23 +1,57 @@
 <active-chat-panel user="user"></active-chat-panel>
-<section class="messaging-state">
-  <header>
-    <h3>Group Name</h3>
-    <div>
-      <span>User names</span>
+<div class="messaging-state">
+  <section class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+    <header>
+      <h3>Group Name</h3>
+      <div>
+        <span>User names</span>
+      </div>
+    </header>
+    <div id="messages-view">
+      <div ng-repeat="message in messages">
+        <formatted-text rawtext="message.content"></formatted-text>
+        <span ng-bind="message.author"></span><span ng-bind="message.dtg"></span>
+      </div>
     </div>
-  </header>
-  <div id="messages-view">
-    <div ng-repeat="message in messages">
-      <formatted-text rawtext="message.content"></formatted-text>
-      <span ng-bind="message.author"></span><span ng-bind="message.dtg"></span>
+    <footer>
+      <form name="newMessageForm" ng-submit="transmit()">
+        <textarea ng-model="newMessage.content" name="content" placeholder="Write a message..." ng-required="true" novalidate>
+        </textarea>
+        <input type="submit" class="sqn-btn-positive" value="Send" ng-class="{'sqn-btn-disabled': newMessageForm.content.$invalid }" ng-disabled="newMessageForm.content.$invalid"></input>
+      </form>
+    </footer>
+  </section>
+  <section class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+    <div class="">
+      <button class="sqn-btn">Create new group</button>
     </div>
-  </div>
-  <footer>
-    <form name="newMessageForm" ng-submit="transmit()">
-      <textarea ng-model="newMessage.content" name="content" placeholder="Write a message..." ng-required="true" novalidate>
-      </textarea>
-      <input type="submit" class="sqn-btn-positive" value="Send" ng-class="{'sqn-btn-disabled': newMessageForm.content.$invalid }" ng-disabled="newMessageForm.content.$invalid"></input>
-    </form>
-  </footer>
-
-</section>
+    <div class="flex-container-row message-group-modification">
+      <form class="new-message-group" name="newMessageGroup" ng-submit="createGroup()">
+        <input type="text" class="sqnInputActive input-inline" ng-model="newGroup.name" placeholder="Add a group name"></input>
+        <div class="checkbox sqnInput input-inline">
+          <label for="group-private"><input type="checkbox" name="group-private" ng-model="newGroup.private"></input>Private (only group members can add others)</label>
+        </div>
+        <input class="sqn-btn-positive" type="submit" value="Create Group" ng-disabled="newGroup.participants.length === 0"></input>
+      </form>
+    </div>
+    <search-options evts="events" categories="categories" platforms="platforms"></search-options>
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <h5>Filter the results from above by the parameters here.</h5>
+      <form name="userFilterForm" ng-submit="filterUsers()">
+        <div class="flex-container-row">
+          <input type="text" class="sqnInputActive" ng-model="filterParams.firstName" placeholder="First Name"></input>
+          <input type="text" class="sqnInputActive" ng-model="filterParams.lastName" placeholder="Last Name"></input>
+          <input type="text" ng-model="filterParams.email" class="sqnInputActive" placeholder="Email Address">
+        </div>
+        <div class="flex-container-row">
+          <input type="submit" class="sqn-btn-inverse" value="Filter"></input>
+        </div>
+      </form>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+      <div class="flex-container-row">
+        <messaging-contact user="result" current="user" ng-if="!loadingData" ng-repeat="result in searchResults | filter:userFilterParams"></messaging-contact>
+      </div>
+    </div>
+  </section>
+</div>
