Completed basic logic for displaying buttons for different user actions when searching for and trying to add users to groups. Moved to single state for messaging. Further work to enusure logic is wired up properly.

--- a/browser/js/common/directives/active-chat-panel/active-chat-panel.html
+++ b/browser/js/common/directives/active-chat-panel/active-chat-panel.html
@@ -3,7 +3,7 @@
 </div>
 <section>
   <header>
-    <a class="sqn-btn" ui-sref="messagingSession({id: userId, sessionId: 'no-session' })">Find a squadron mate</a>
+    <a class="sqn-btn" ui-sref="messagingSession({id: userId, sessionId: 'no-session', sessionType: 'none' })">Find a squadron mate</a>
     <h5>Message Contacts</h5>
   </header>
   <div class="active-chat-holder">
