Have adding user to private group working.

--- a/browser/js/messaging/messaging-session.html
+++ b/browser/js/messaging/messaging-session.html
@@ -31,7 +31,7 @@
         <div class="checkbox sqnInput input-inline">
           <label for="group-private"><input type="checkbox" name="group-private" ng-model="newGroup.private"></input>Private (only group members can add others)</label>
         </div>
-        <input class="sqn-btn-positive" type="submit" value="Create Group" ng-disabled="newGroup.participants.length === 0"></input>
+        <input class="sqn-btn-positive" type="submit" value="Create Group"></input>
       </form>
     </div>
     <search-options evts="events" categories="categories" platforms="platforms"></search-options>
