--- a/browser/js/messaging/messaging-session.html
+++ b/browser/js/messaging/messaging-session.html
@@ -22,35 +22,38 @@
     </footer>
   </section>
   <section class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+    <div></div>
     <div class="">
-      <button class="sqn-btn" ng-click="createNewGroup()" ng-bind="creatingNewGroup.label"></button>
-    </div>
-    <div ng-if="creatingNewGroup.display" class="flex-container-row message-group-modification">
-      <form class="new-message-group" name="newMessageGroup" ng-submit="createGroup()">
-        <input type="text" class="sqnInputActive input-inline" ng-model="newGroup.name" placeholder="Add a group name"></input>
-        <div class="checkbox sqnInput input-inline">
-          <label for="group-private"><input type="checkbox" name="group-private" ng-model="newGroup.private"></input>Private (only group members can add others)</label>
-        </div>
-        <input class="sqn-btn-positive" type="submit" value="Create Group"></input>
-      </form>
-    </div>
-    <search-options evts="events" categories="categories" platforms="platforms"></search-options>
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-      <h5>Filter the results from above by the parameters here.</h5>
-      <form name="userFilterForm" ng-submit="filterUsers()">
-        <div class="flex-container-row">
-          <input type="text" class="sqnInputActive" ng-model="filterParams.firstName" placeholder="First Name"></input>
-          <input type="text" class="sqnInputActive" ng-model="filterParams.lastName" placeholder="Last Name"></input>
-          <input type="text" ng-model="filterParams.email" class="sqnInputActive" placeholder="Email Address">
-        </div>
-        <div class="flex-container-row">
-          <input type="submit" class="sqn-btn-inverse" value="Filter"></input>
-        </div>
-      </form>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
       <div class="flex-container-row">
-        <messaging-contact user="result" current="user" ng-if="!loadingData" ng-repeat="result in searchResults | filter:userFilterParams"></messaging-contact>
+        <button class="sqn-btn-positive sqn-btn-flex" ng-click="createNewGroup()" ng-bind="creatingNewGroup.label"></button>
+      </div>
+      <div ng-if="creatingNewGroup.display" class="flex-container-row message-group-modification">
+        <form class="new-message-group" name="newMessageGroup" ng-submit="createGroup()">
+          <input type="text" class="sqnInputActive input-inline" ng-model="newGroup.name" placeholder="Add a group name"></input>
+          <div class="checkbox sqnInput input-inline">
+            <label for="group-private"><input type="checkbox" name="group-private" ng-model="newGroup.private"></input>Private (only group members can add others)</label>
+          </div>
+          <input class="sqn-btn-positive" type="submit" value="Create Group"></input>
+        </form>
+      </div>
+      <search-options evts="events" categories="categories" platforms="platforms"></search-options>
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <h5>Filter the results from above by the parameters here.</h5>
+        <form name="userFilterForm" ng-submit="filterUsers()">
+          <div class="flex-container-row">
+            <input type="text" class="sqnInputActive" ng-model="filterParams.firstName" placeholder="First Name"></input>
+            <input type="text" class="sqnInputActive" ng-model="filterParams.lastName" placeholder="Last Name"></input>
+            <input type="text" ng-model="filterParams.email" class="sqnInputActive" placeholder="Email Address">
+          </div>
+          <div class="flex-container-row">
+            <input type="submit" class="sqn-btn-inverse" value="Filter"></input>
+          </div>
+        </form>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+        <div class="flex-container-row">
+          <messaging-contact user="result" current="user" ng-if="!loadingData" ng-repeat="result in searchResults | filter:userFilterParams"></messaging-contact>
+        </div>
       </div>
     </div>
   </section>
