--- a/browser/js/common/directives/group-contact-tile/group-contact-tile.html
+++ b/browser/js/common/directives/group-contact-tile/group-contact-tile.html
@@ -1,4 +1,4 @@
 <div ng-class="" class="tile-content group-tile flex-container-row">
   <h6 ng-click="goToSession()" ng-bind="session.name"></h6>
-  <button class="sqn-btn-small">Leave</button>
+  <button class="sqn-btn-small" ng-click="leaveGroup()">Leave</button>
 </a>
