Got directive for scrolling the window to the bottom of the element to work.

--- a/browser/js/common/directives/chat-message-output/chat-message-output.html
+++ b/browser/js/common/directives/chat-message-output/chat-message-output.html
@@ -1,2 +1,2 @@
 <formatted-text rawtext="message.content"></formatted-text>
-<p><span ng-bind="message.author"></span> - <formatted-dtg rawdtg="message.dtg"></formatted-dtg></p>
+<p class="message-footer"><span ng-bind="message.author"></span> - <formatted-dtg rawdtg="message.dtg"></formatted-dtg></p>
