Have finished basic styling of messaging interface. Also put a set interval on the timings in the message-output directive to up date the times on the messages dynamically.

--- a/browser/js/attendee/attendee.html
+++ b/browser/js/attendee/attendee.html
@@ -14,7 +14,7 @@
     </div>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 attendee-announcements">
       <h3>Event Announcements</h3>
-      <div class="announcement-viewer">
+      <div scroll-bottom class="announcement-viewer">
         <article ng-repeat="announcement in allAnnouncements">
           <header class="flex-container-row">
             <h4 ng-bind="announcement.title"></h4>
