--- a/browser/js/messaging/messaging-session.html
+++ b/browser/js/messaging/messaging-session.html
@@ -70,9 +70,10 @@
           <div ng-if="creatingNewGroup.display" class="flex-container-row message-group-modification">
             <form class="new-message-group" name="newMessageGroup" ng-submit="createGroup()">
               <input type="text" class="sqnInputActive input-inline" ng-model="newGroup.name" placeholder="Add a group name"></input>
-              <div class="checkbox sqnInput input-inline">
+              <!-- <div class="checkbox sqnInput input-inline">
                 <label for="group-private"><input type="checkbox" name="group-private" ng-model="newGroup.private"></input>Private (only group members can add others)</label>
-              </div>
+              </div> -->
+              <button class="sqn-btn-danger" ng-class="{'group-private': newGroup.private}" ng-click="makePrivateGroup()" ng-bind="groupPrivate"></button>
               <input class="sqn-btn-positive" type="submit" value="Create Group"></input>
             </form>
           </div>
